# gpu_scheduler

./: .countProjectLines.sh  .countProjectLinesWTP.sh  .gitignore  Dockerfile  Makefile  README.md  TODO  analise_tempos.txt
scheduler/: CMakeLists.txt  Makefile  builder.cu  builder.cuh  gpu_scheduler.cu  json.cpp  json.hpp  main_test.cu  reader.hpp  types.hpp
scheduler/allocator/: CMakeLists.txt  all.cuh  free.hpp  multicriteria_clusterized.cuh  naive.hpp  pure_mcl.hpp  rank_clusterized.cuh  utils.hpp
scheduler/allocator/links/: CMakeLists.txt  links_allocator.cuh  links_allocator.hpp  widestPath.cuh  widestPath.hpp
scheduler/allocator/rank_algorithms/: CMakeLists.txt  rank.hpp
scheduler/allocator/rank_algorithms/multicriteria/: CMakeLists.txt  multicriteria.hpp
scheduler/allocator/rank_algorithms/standard/: CMakeLists.txt  bestFit.hpp  worstFit.hpp
scheduler/allocator/rank_algorithms/user_defined/: CMakeLists.txt
scheduler/allocator/standard/: CMakeLists.txt  bestFit.hpp  firstFit.hpp  worstFit.hpp
scheduler/clustering/: CMakeLists.txt  clustering.cuh  mclInterface.cu  mclInterface.cuh
scheduler/clustering/mclClusterLogs/: log1.txt
scheduler/datacenter/: CMakeLists.txt  host.hpp
scheduler/datacenter/json/: hostsSchema.json  jsonHostsGenerator.py
scheduler/datacenter/json/fat_tree/: 0.json  10.json  12.json  14.json  16.json  18.json  20.json  22.json  24.json  26.json  28.json  30.json  32.json  34.json  36.json  38.json  4.json  40.json  42.json  44.json  46.json  48.json  6.json  8.json
scheduler/datacenter/json/generic/: HPC2N.json  KTH_SP2.json  LLNL_Thunder.json  SDSC_BLUE.json  grenoble.json  lyon.json  nancy.json  nantes.json
scheduler/datacenter/json/grid5000/: grenoble.json  nantes.json
scheduler/datacenter/tasks/: CMakeLists.txt  container.cpp  container.hpp  pod.cpp  pod.hpp  task.cpp  task.hpp  task_resources.hpp
scheduler/logs/: dc-test_4-size_10-tsize_4.txt  dc_log.txt  task-test_4-size_10-tsize_4.txt  task_log.txt
scheduler/logs/AHPG_BW_DONE/: dc-none-pod50-bw50-dt2.json  micro-benchnone-pod50-bw50-dt2.json  request-none-pod50-bw50-dt2.json
scheduler/logs/ahp_ok_topsis_almost_bw/: dc-none-pod50-bw50-dt2.json  micro-benchnone-pod50-bw50-dt2.json  request-none-pod50-bw50-dt2.json
scheduler/logs/ahp_topsis_bw_done/: dc-none-pod50-bw50-dt2.json  micro-benchnone-pod50-bw50-dt2.json  request-none-pod50-bw50-dt2.json
scheduler/logs/ahpg_frag_700/: dc-none-pod50-bw50-dt1.json  micro-benchnone-pod50-bw50-dt1.json  request-none-pod50-bw50-dt1.json
scheduler/logs/all_20_done/: dc-none-pod50-bw50-dt0.json  dc-none-pod50-bw50-dt1.json  dc-none-pod50-bw50-dt2.json  micro-benchnone-pod50-bw50-dt0.json  micro-benchnone-pod50-bw50-dt1.json  micro-benchnone-pod50-bw50-dt2.json  request-none-pod50-bw50-dt0.json  request-none-pod50-bw50-dt1.json  request-none-pod50-bw50-dt2.json
scheduler/logs/k20_all_done/: README  dc-mcl-pod50-bw50-dt1.json  dc-mcl-pod50-bw50-dt2.json  dc-none-pod50-bw50-dt0.json  dc-none-pod50-bw50-dt2.json  dc-standard-wf-pod50-bw50-k20.json  micro-bench-wf-pod50-bw50-k20.json  micro-benchmcl-pod50-bw50-dt0.json  micro-benchnone-pod50-bw50-dt2.json  request-mcl-pod50-bw50-dt0.json  request-mcl-pod50-bw50-dt2.json  request-none-pod50-bw50-dt0.json  request-none-pod50-bw50-dt2.json  request-wf-pod50-bw50-k20.json  standard-dc-pod50-bw50.json  standard-microbenchmark-pod50-bw50.json  standard-request-pod50-bw50.json
scheduler/logs/k20_all_done/test1/: dc-mcl-pod50-bw50-dt0.json  dc-none-pod50-bw50-dt1.json  micro-benchmcl-pod50-bw50-dt1.json  micro-benchmcl-pod50-bw50-dt2.json  micro-benchnone-pod50-bw50-dt0.json  micro-benchnone-pod50-bw50-dt1.json  request-mcl-pod50-bw50-dt1.json  (+1 more)
scheduler/main_resources/: CMakeLists.txt  interval_tree.hpp  main_resources_types.hpp  resourcesData.json  resourcesSchema.json  task_ordering.hpp  types.hpp
scheduler/multicriteria/: CMakeLists.txt  multicriteria.hpp
scheduler/multicriteria/ahp/: CMakeLists.txt  ahp.cpp  ahp.hpp  ahpg.cu  ahpg.cuh  ahpg_kernel.cuh
scheduler/multicriteria/topsis/: topsis.cu  topsis.cuh
scheduler/objective_functions/: CMakeLists.txt  footprint.hpp  fragmentation.hpp
scheduler/requests/: containerRequestSchema.json
scheduler/requests/container/: containergenerator.py  data-0.json  data-1.json  data-1024.json  data-128.json  data-131072.json  data-16.json  data-16384.json  data-2.json  data-2048.json  data-256.json  data-262144.json  data-32.json  data-32768.json  data-4.json  data-4096.json  data-512.json  data-64.json  data-65536.json  data-8.json  data-8192.json
scheduler/requests/container_link/: .gitattributes  README.txt  compress.tar.lrz  name_definition  pod0-bw0.json  pod0-bw25.json  pod0-bw50.json  pod100-bw0.json  pod100-bw25.json  pod100-bw50.json  pod50-bw0.json  pod50-bw25.json  pod50-bw50.json  requests-1.json  requests-10.json  requests-1100.json  requests-150.json  requests-2.json  requests-250.json  requests-25100.json  requests-2550.json  requests-3.json  requests-4.json  requests-500.json  requests-50100.json  requests-5050.json
scheduler/requests/datacenter/: data-50.json
scheduler/requests/googleBorg/: google-101.json  google-1010.json
scheduler/requests/requestGenerator/: dataModel.py  generateRequests.py  pod1000-bw50.json
scheduler/requests/temporal/: LLNL_Thunder-deadline.json  LLNL_Thunder-early.json  LLNL_Thunder.json  grenoble-1500k.json  grenoble-250k.json  grenoble.json  grenoble_normalized.json  lyon-100k-early.json  lyon-100k.json  lyon-10k.json  lyon-1500k.json  lyon-150k-early.json  lyon-150k.json  lyon-1k.json  lyon-250k.json  lyon-500k.json  lyon-50k-early.json  lyon-50k.json  lyon.json  lyon_normalized.json  nancy-1500k.json  nancy-250k.json  nancy.json  nancy_normalized.json  nantes-1500k.json  nantes-250k.json  nantes.json  nantes_normalized.json  pod1-bw0.json  pod197-bw0.json  pod198-bw0.json  pod199-bw0.json  pod2-bw0.json  pod200-bw0.json  pod3-bw0.json  pod4-bw0.json
scheduler/topology/: CMakeLists.txt  bcubeInterface.cuh  dcellInterface.cuh  fatTreeInterface.cuh  topologyInterface.cuh
(+565 files in other folders)
